[gd_scene load_steps=3 format=3 uid="uid://daew471gtbf0p"]

[ext_resource type="Script" uid="uid://xmqvxoijf5h4" path="res://light_button.gd" id="1_lbbfs"]
[ext_resource type="FontFile" uid="uid://cmwhpb6lbgalg" path="res://fonts/vhs-vcr-osd.ttf" id="2_o04m4"]

[node name="LightButton" type="ColorRect" node_paths=PackedStringArray("note_label")]
custom_minimum_size = Vector2(32, 32)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_lbbfs")
note_label = NodePath("RichTextLabel")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
modulate = Color(1, 1, 1, 0.54509807)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_o04m4")
theme_override_fonts/bold_font = ExtResource("2_o04m4")
theme_override_fonts/bold_italics_font = ExtResource("2_o04m4")
theme_override_fonts/italics_font = ExtResource("2_o04m4")
theme_override_fonts/mono_font = ExtResource("2_o04m4")
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "0"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
